--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
+    "i18next": "^19.8.3",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
