--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "(react-scripts start) & yarn api",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "cd api/dev && php artisan serve"
   },
   "eslintConfig": {
     "extends": [
